--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                 Use Kubernetes to improve availability, scalability, and resource efficiency of your containerized applications.
                             </p>
                             <div class="circles">
-                                <a href="#" class="circle"></a>
+                                <a href="#" class="circle current"></a>
                                 <a href="#" class="circle"></a>
                                 <a href="#" class="circle"></a>
                                 <a href="#" class="circle"></a>
@@ -700,7 +700,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-12 col-md-10 col-md-offset-1">
+                    <div class="col-xs-12">
                         <div class="carousel">
                             <div class="box">
                                 <div class="logo">
@@ -715,7 +715,7 @@
                                 <p class="role">Co-founder and CTO</p>
                             </div>
                             <div class="circles">
-                                <a href="#" class="circle"></a>
+                                <a href="#" class="circle current"></a>
                                 <a href="#" class="circle"></a>
                                 <a href="#" class="circle"></a>
                             </div>
